--- a/site_exemplo/index.html
+++ b/site_exemplo/index.html
@@ -9,5 +9,6 @@
     <h1>Olá Mundo</h1>
 <hr>
 <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Qui non, nisi atque voluptas dolore sed! Placeat doloribus vero, natus consectetur maiores ratione voluptatem et amet magnam saepe quis. Corrupti, iste.</p>
+<p>Paráguafo dois!</p>
 </body>
 </html>
